# repoindex-analyzer-json

./: README.md  pyproject.toml
src/repoindex_analyzer_json/: __init__.py
tests/: test_json_package.py
