[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoindex-analyzer-json"
version = "0.1.0"
description = "First-party JSON analyzer plugin for repoindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "repoindex",
]

[project.entry-points."repoindex.analyzers"]
json = "repoindex_analyzer_json:build_analyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repoindex_analyzer_json = ["py.typed"]
